# Notes

./: README.md  pyproject.toml
src/: db.sqlite3
src/apps/: api_urls.py  urls.py
src/apps/django_common/: apps.py  exceptions.py  handlers.py  renderers.py  views.py
src/apps/django_common/mixins/: views.py
src/apps/notes_app/: admin.py  apps.py  models.py  urls.py  views.py
src/apps/notes_app/api/: filters.py  serializers.py  urls.py  views.py
src/apps/notes_app/migrations/: 0001_initial.py  0002_note_author.py
src/apps/users/: admin.py  apps.py  managers.py  models.py  urls.py  views.py
src/apps/users/api/: serializers.py  urls.py  views.py
src/apps/users/migrations/: 0001_initial.py  0002_user_groups_user_user_permissions_and_more.py
src/config/: settings.py  swagger.py  urls.py
src/notes_app/: apps.py
src/templates/: base.html  nav.html
src/templates/auth/: register.html
src/templates/notes/: create_edit.html  edit.html  notes.html
